# MediaConverter

./: CMakeLists.txt  README.md  README_en.md  feedplot.sh  media-converter.desktop  media-converter.sh
.github/workflows/: cmake.yml
doc/: info.md
src/: main.cpp
